<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_samples</name>
  <version>0.0.1</version>
  <description>Moveit Task Constructor Sample</description>
  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>
  <author>Marq Rasmussen</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>behaviortree_ros2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>mtc_bt</exec_depend>
  <exec_depend>moveit_resources_panda_description</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
